# claude-blender-bamboo

./: .gitignore  BILLION_DOLLAR_ROADMAP.md  Dockerfile  INITIAL_PROMPT.md  OVERNIGHT_PLAN.md  PRODUCT_PLAN.md  PROJECT_PLAN.md  RALPH_PROMPT.md  README.md  ROADMAP.md  demo.py  docker-compose.yml  jarvis.py  jarvis_server.py  launch.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  settings.py
data/: analytics.db  print_queue.json
data/versions/: index.json
docker/: prometheus.yml
examples/: basic_workflow.py  mock_printer_demo.py
scans/imported/: shoe_colored.glb  shoe_colored.mtl  shoe_isolated.stl
src/: __init__.py  config.py  utils.py
src/ai/: __init__.py  meshy_client.py  mock_client.py  text_to_3d.py  tripo_client.py
src/analytics/: __init__.py  reports.py  storage.py  tracker.py
src/api/: __init__.py  quotas.py  rate_limit.py  server.py
src/ar/: __init__.py  ar_server.py  qr_generator.py  usdz_exporter.py
src/audit/: __init__.py  logger.py
src/auth/: __init__.py  api_keys.py  jwt.py  middleware.py  password.py  rbac.py  sso.py
src/blender/: __init__.py  case_generator.py  command_interpreter.py  design.py  design_advisor.py  export_3mf.py  exporter.py  interactive_addon.py  interactive_session.py  mesh_repair.py  mesh_utils.py  overhang_detector.py  parametric_edits.py  primitives.py  runner.py  scan_processor.py  scan_runner.py  support_generator.py  support_optimizer.py  worker.py
src/capture/: __init__.py  photogrammetry.py  scan_importer.py  texture_capture.py
src/cli/: __init__.py  adaptive_cmd.py  analytics.py  analyze.py  ar_cmd.py  cost_cmd.py  dashboard.py  generate.py  main.py  maintenance_cmd.py  materials.py  monitor.py  photogrammetry_cmd.py  preview.py  queue_cmd.py  suggest.py  support.py  texture_cmd.py  timelapse_cmd.py  version_cmd.py
src/db/: __init__.py  models.py
src/docs/: __init__.py  assembly_generator.py  post_processing.py
src/estimator/: __init__.py  cost_estimator.py  cost_optimizer.py  eco_mode.py
src/farm/: __init__.py  maintenance.py  monitoring.py  optimizer.py  scheduler.py
src/healthcare/: __init__.py  dhf.py  validation.py
src/jarvis/: __init__.py  core.py  dashboard.py  display.py  server.py  sounds.py  voice.py  voice_control.py
src/laser/: __init__.py  cross_section.py  dxf_export.py  job_control.py  path_optimizer.py  presets.py  projection.py  svg_export.py
src/maintenance/: __init__.py  predictor.py  schedules.py
src/marketplace/: __init__.py  publish.py  search.py
src/materials/: __init__.py  compatibility.py  inventory.py  library.py  material_db.py
src/monitoring/: __init__.py  camera_stream.py  failure_detector.py  failure_predictor.py  geometry_analyzer.py  timelapse.py
src/nesting/: __init__.py  batch_nester.py
tests/: __init__.py  test_adaptive_layers.py  test_ai_generation.py  test_analytics.py  test_ar.py  test_assembly.py  test_cost_optimizer.py  test_dashboard.py  test_design_advisor.py  test_eco_mode.py  test_failure_detection.py  test_failure_predictor.py  test_integration.py  test_inventory.py  test_maintenance.py  test_materials.py  test_nesting.py  test_photogrammetry.py  test_post_processing.py  test_print_preview.py  test_printer.py  test_queue.py  test_scan.py  test_supports.py  test_texture_capture.py  test_timelapse.py  test_tolerance.py  test_version.py  test_voice_control.py  test_workflow.py
web/: index.html
(+46 files in other folders)
